<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prod3Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degraded1"
        android:orientation="vertical">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_barra"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@color/white"
            android:elevation="3dp"
            android:background="@drawable/degraded_2"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/text_1"
            app:backgroundTint="@null" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="851dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="15dp"
            app:backgroundTint="@null"
            app:cardBackgroundColor="@color/rosi"
            app:cardCornerRadius="20dp"
            app:cardElevation="@dimen/cardview_compat_inset_shadow">



            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="110dp"
                android:src="@drawable/favorito2" />


            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/favorite" />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/cupc_1" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_product3"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold" />






            <TextView

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:paddingStart="9dp"
                android:paddingTop="9dp"
                android:text="@string/text_description3"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />



            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="555dp"
                android:text="@string/text_price1"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="650dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/boton"
                android:backgroundTint="@color/rosa"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/boton"
                    android:backgroundTint="@color/black"
                    android:onClick="sum3"
                    android:padding="1dp"
                    android:text="+"
                    android:textColor="@color/white"
                    android:textSize="25dp" />



                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="86dp"
                    android:background="@color/rosa"
                    android:onClick="buttonBuy"
                    android:padding="2dp"
                    android:src="@drawable/icon_pastel" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/boton"
                    android:backgroundTint="@color/black"
                    android:onClick="rest3"
                    android:padding="1dp"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="25dp" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_buy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="6dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/boton"
                android:backgroundTint="@color/white"
                android:onClick="buttonBuy"
                android:text="@string/text_buy"
                android:textSize="26dp" />


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>

</ScrollView>
